[gd_scene load_steps=4 format=3 uid="uid://ch5yid0u7nwuh"]

[ext_resource type="Script" path="res://Enemy Manager/Scripts/wave_manager.gd" id="1_7u0uf"]
[ext_resource type="PackedScene" uid="uid://c0rvebin2dhlv" path="res://Enemy Manager/FormationManager.tscn" id="2_i50id"]
[ext_resource type="AudioStream" uid="uid://civle4evp5h2r" path="res://Textures/Music/Boss_music.mp3" id="9_3x51k"]

[node name="WaveManager" type="Node2D"]
script = ExtResource("1_7u0uf")
wave_delay = 3.0
formation_manager_scene = ExtResource("2_i50id")

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_3x51k")

[connection signal="finished" from="BossMusic" to="." method="_on_boss_music_finished"]
